card spacing fixed

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -146,15 +146,23 @@
 
   .client-name {
     font-size: 16px !important;
+    text-decoration: none;
+    width: 35%;
+    color: $sblue;
     font-weight: bold;
     line-height: 16px;
     margin-left: 48px;
     margin-bottom: 0px;
+
+    &:hover {
+      color: $sorange;
+    }
   }
 
   .event-date {
     font-size: 16px !important;
     margin-bottom: 0px;
+    width: 30%;
   }
 
   #invoice-info {
